--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^6.0.8",
     "nanoid": "^3.1.28",
     "pino": "^6.13.3",
     "pino-pretty": "^7.0.1",
@@ -36,9 +35,12 @@
     "@types/node": "^16.10.2",
     "@types/pino": "^6.3.11",
     "@types/supertest": "^2.0.11",
-    "jest": "^27.2.4",
-    "supertest": "^6.1.6",
-    "ts-jest": "^27.0.5",
+    "jest": "^27.5.1",
+    "mongodb-memory-server": "^8.13.0",
+    "mongodb-memory-server-core": "^8.13.0",
+    "mongoose": "^7.3.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^27.1.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   }
